Time: 2 ms (39.59%) | Memory: 44.7 MB (46.02%) - LeetSync