@@ -3,21 +3,23 @@ class Solution {
     public List<List<Integer>> permute(int[] nums) {
         Arrays.sort(nums);
         ans=new ArrayList<>();
-        helper(nums,new ArrayList<Integer>());
+        helper(nums,new ArrayList<>());
         return ans;
-
     }
-    public void helper(int[] arr,List<Integer> used){
-        if(used.size() == arr.length){
+
+     public void helper(int[] nums,List<Integer> used){
+
+        if(nums.length == used.size()){
             ans.add(new ArrayList<>(used));
             return;
         }
-        for(int i=0;i<arr.length;i++){
-            if(!used.contains(arr[i])){
-                used.add(arr[i]);
-                helper(arr,used);
-                used.removeLast();
+
+        for(int i=0;i<nums.length;i++){
+            if(!used.contains(nums[i])){
+                used.add(nums[i]);
+                helper(nums, used);
+                used.remove(used.size()-1);
             }
         }
-    }
+     }
 } 
